--- a/To-do list/MainWindow.xaml
+++ b/To-do list/MainWindow.xaml
@@ -509,11 +509,11 @@
                         <StackPanel DockPanel.Dock="Top" Margin="0,0,0,24">
                             <Grid Margin="0,0,0,20">
                                 <TextBlock Text="Notas" FontSize="20" FontWeight="Bold" VerticalAlignment="Center"/>
-                                <Button HorizontalAlignment="Right"
+                                <Button HorizontalAlignment="Left"
                                         Style="{StaticResource IconButton}"
                                         Content="{StaticResource IconPlus}"
                                         ToolTip="Nueva nota"
-                                        Command="{Binding NewNoteCommand}"/>
+                                        Command="{Binding NewNoteCommand}" Height="36" Margin="202,0,0,0" VerticalAlignment="Bottom"/>
                             </Grid>
 
                             <!-- Search Box -->
@@ -543,7 +543,7 @@
                                              Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
                                              />
                                     <!-- centrar el texto dentro del textbox -->
-                                    
+
                                 </Grid>
                             </Border>
                         </StackPanel>
@@ -718,6 +718,7 @@
                             <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="10,0,0,0">
                                 <Button Style="{StaticResource IconButton}" 
                                         Content="{StaticResource IconMore}" 
+                                        Command="{Binding NewNoteCommand}"
                                         ToolTip="Más opciones"
                                         Margin="0,0,6,0"/>
                                 <Button Style="{StaticResource DangerIconButton}" 
